<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_scanner"
        android:title="@string/scanner" />
    <item
        android:id="@+id/bottom_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_records"
        android:title="@string/records" />

    <item
        android:id="@+id/bottom_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_info"
        android:title="@string/info" />
</menu>