<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/category_bg"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/icon_good" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/transactionCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/good_egg"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transactionDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:text="@string/Date"
                    android:textColor="#8D6E63"
                    android:textSize="12sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/transactionCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>