<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".CameraActivity">

    <TextView
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Record_Date"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date" />


    <ScrollView
        android:id="@+id/dashboard_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:foregroundGravity="center"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UnknownId">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/classified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/classified_as"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textColor="#C30000"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confidencesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confidences"
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/OK"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:padding="10dp"
        android:text="Ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:padding="10dp"
        android:text="OK"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>